Bug #27283 Race condition in GCP Master take-over
Submitted: 20 Mar 2007 10:52 Modified: 23 Mar 2007 10:31
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:
Assigned to: Jonas Oreland Target Version:

[20 Mar 2007 10:52] Jonas Oreland
Description:
Time: Tuesday 20 Mars 2007 - 10:46:13
Status: Temporary error, restart node
Message: Assertion (Internal error, programming error or missing error message, please
report a bug)
Error: 2301
Error data: SignalCounter::clear
Error object: ../../../../../storage/ndb/src/kernel/vm/SignalCounter.hpp line: 97 (block:
DBDIH)
Program: ndbd
Pid: 7006
Trace: ./ndb_2_trace.log.2
Version: Version 5.1.15 (beta)

How to repeat:
luck or new error insert 7181/7182

Suggested fix:
[20 Mar 2007 14:44] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22344

ChangeSet@1.2124, 2007-03-20 14:44:20+01:00, jonas@perch.ndb.mysql.com +3 -0
  ndb - bug#27283 (wl2325-5.0)
    Handle race condtition between MASTER_GCPCONF and execGCP_NODEFINISH
[20 Mar 2007 16:16] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22367

ChangeSet@1.2298, 2007-03-20 16:16:25+01:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#27283 (wl2325-5.0)
      Handle race condtition between MASTER_GCPCONF and execGCP_NODEFINISH
[20 Mar 2007 16:23] Jonas Oreland
last commit was really in 5.0...sorry for the incorrect message
[20 Mar 2007 16:52] Jonas Oreland
pushed to 5.0-ndb, 5.1-ndb, telco-6.1, 51-telco

wont fix in 4.1
[21 Mar 2007 15:27] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22489

ChangeSet@1.2127, 2007-03-21 15:27:00+01:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#27283
    Additional fix for 2-node case
[21 Mar 2007 15:34] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22491

ChangeSet@1.2300, 2007-03-21 15:34:47+01:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#27283
      Additional fix for 2-node case
[22 Mar 2007 21:46] Mads Martin Joergensen
Fixed in 5.0.40 and 5.1.17
[23 Mar 2007 10:31] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.0.40, 5.1.17, and ndb-6.1.6 changelogs.