ndb - bug#27283     Additional fix for 2-node case